--- a/config/development.yaml
+++ b/config/development.yaml
@@ -16,45 +16,32 @@ logger:
 
 # Web server configuration
 server:
+  binding: 0.0.0.0
   # Port on which the server will listen. the server binding is 0.0.0.0:{PORT}
   port: 5150
   # The UI hostname or IP address that mailers will point to.
-  host: http://localhost
+  host: http://localhost:5150
   # Out of the box middleware configuration. to disable middleware you can changed the `enable` field to `false` of comment the middleware block
   middlewares:
-    # #############################################
-    # Full stack SaaS asset serving
-    # #############################################
-    #
-    # You can choose from:
-    #
-    # (1) Server-side rendered templates (like erb in Ruby, ejs in nodejs) based on the Tera templating engine.
-    # (2) Client-side frontend set up
-    #
-    # You can also choose both.
-    #
-    # Uncomment the relevant sections below:
-
-    #
-    # (1) Server-side static assets config
-    # ====================================
-    #
-    # for use with the view_engine in initializers/view_engine.rs
     cors:
       enable: true
       max_age: 3600
       allow_origins:
         - "http://localhost:5173"
       allow_credentials: true
+      
+    limit_payload:
+      enable: true
+      body_limit: 500mb
 
     static:
       enable: true
       must_exist: true
       precompressed: false
       folder:
-        uri: "/static"
-        path: "assets/static"
-      fallback: "assets/static/404.html"
+        uri: "/"
+        path: "frontend/dist"
+      fallback: "frontend/dist/index.html"
 
 # Worker Configuration
 workers:
@@ -69,7 +56,7 @@ mailer:
   # SMTP mailer configuration.
   smtp:
     # Enable/Disable smtp mailer.
-    enable: true
+    enable: false
     # SMTP server host. e.x localhost, smtp.gmail.com
     host: {{ get_env(name="MAILER_HOST", default="localhost") }}
     # SMTP server port
@@ -80,17 +67,10 @@ mailer:
     #   user:
     #   password:
 
-# Initializers Configuration
-# initializers:
-#  oauth2:
-#    authorization_code: # Authorization code grant type
-#      - client_identifier: google # Identifier for the OAuth2 provider. Replace 'google' with your provider's name if different, must be unique within the oauth2 config.
-#        ... other fields
-
 # Database Configuration
 database:
   # Database connection URI
-  uri: {{ get_env(name="DATABASE_URL", default="postgres://postgres:postgres@localhost:5432/podcast") }}
+  uri: {{ get_env(name="DATABASE_URL", default="sqlite://podcast_db.sqlite?mode=rwc") }}
   # When enabled, the sql query will be logged.
   enable_logging: false
   # Set the timeout duration when acquiring a connection.
@@ -108,13 +88,6 @@ database:
   # Recreating schema when application loaded.  This is a dangerous operation, make sure that you using this flag only on dev environments or test mode
   dangerously_recreate: false
 
-# Queue Configuration
-queue:
-  kind: Redis
-  # Redis connection URI
-  uri: {{ get_env(name="REDIS_URL", default="redis://127.0.0.1") }}
-  # Dangerously flush all data in Redis on startup. dangerous operation, make sure that you using this flag only on dev environments or test mode
-  dangerously_flush: false
 
 # Authentication Configuration
 auth:
