Rewrite FE in Svelte 5

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:5150/api
-VITE_ROOT_URL=http://localhost:5150
+VITE_API_URL=https://podcast.gabrielkaszewski.dev/api
+VITE_ROOT_URL=https://podcast.gabrielkaszewski.dev
