--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,12 @@
   "devDependencies": {
     "@svelte-put/shortcut": "^4.0.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@tailwindcss/postcss": "^4.0.8",
     "@tsconfig/svelte": "^5.0.4",
-    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "svelte": "^5.2.7",
     "svelte-check": "^4.1.0",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^4.0.8",
     "tslib": "^2.8.1",
     "typescript": "~5.6.2",
     "vite": "^6.0.1"
